--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_localization: ^0.1.10
   responsive_table: ^0.2.0+2
   dropdown_button2: ^2.1.0
+  sql_conn: ^0.0.3
+  persian_datetime_picker: ^2.5.0
 
 dev_dependencies:
   flutter_test:
