--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,14 @@ dependencies:
   flutter_localization: ^0.1.10
   responsive_table: ^0.2.0+2
   dropdown_button2: ^2.1.0
-  sql_conn: ^0.0.3
   persian_datetime_picker: ^2.5.0
+  flutter_svg: ^0.22.0
+  http: ^0.13.6
+  equatable: ^2.0.0
+  either_dart: ^0.4.0
+  flutter_bloc: ^8.1.2
+  get_it: ^7.6.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
